# mentis

./: .gitignore  README.md  pyproject.toml
src/mentis/: __init__.py  chatbot.py  cli.py  colors.py  config.py  prompts.py  states.py
src/mentis/kg/: __init__.py  base.py  graphml.py  rdf.py
tests/: test_chatbot.py  test_cli.py  test_config.py  test_factory.py  test_kg.py  test_kg_rdf.py  test_states.py
