[project]
name = "mentis"
version = "0.1.0"
description = "Chatbot with Theory of Mind Knowledge Graph (GraphML or RDF)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["networkx>=3.6.1", "ollama>=0.6.2", "rdflib>=7.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.13",
]

[project.scripts]
mentis = "mentis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/mentis/colors.py"]
